# videonova

./: .gitignore  CONTRIBUTING.md  PROJECT.md  README.md  package.json  pnpm-lock.yaml  vite.config.ts
.cargo/: config.toml
.cursor/rules/: tauri-rule.mdc
.github/: PULL_REQUEST_TEMPLATE.md  release.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: bump-version.yml  check-pr.yml  release.yml
docs/: README.md  index.html
docs/js/: language-switcher.js  main.js
src/: App.vue
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/src/: commands.rs  errors.rs  lib.rs  main.rs
src-tauri/src/commands/: mod.rs  speech_commands.rs  transcription_commands.rs  translation_commands.rs  tts_commands.rs  utility_commands.rs  video_commands.rs
src-tauri/src/config/: mod.rs  tts.rs
src-tauri/src/errors/: mod.rs
src-tauri/src/events/: mod.rs
src-tauri/src/lib/soundtouch/: soundtouch_bridge.cpp
src-tauri/src/models/: mod.rs  tts.rs
src-tauri/src/services/: merge.rs  mod.rs
src-tauri/src/services/audio/: merge.rs  mod.rs  tools.rs
src-tauri/src/services/transcription/: mod.rs  transcribe.rs
src-tauri/src/services/translation/: mod.rs  translate.rs
src-tauri/src/services/tts/: config.rs  mod.rs  vtt.rs
src-tauri/src/services/tts/common/: audio.rs  demucs.rs  mod.rs  soundtouch.rs  synchronizer.rs
src-tauri/src/services/tts/common/fragments/: merger.rs  mod.rs  processor.rs  types.rs
src-tauri/src/services/tts/common/subtitles/: mod.rs  parser.rs  types.rs
src-tauri/src/services/tts/common/tests/: mod.rs
src-tauri/src/services/tts/fish_speech/: api.rs  audio.rs  config.rs  installer.rs  mod.rs  models.rs
src-tauri/src/services/tts/fishspeech/: mod.rs  tts.rs
src-tauri/src/services/tts/openai/: mod.rs  tts.rs
src-tauri/src/services/tts/tts/: mod.rs  synchronizer.rs  vtt.rs
src-tauri/src/services/video/: mod.rs  tools.rs  youtube.rs
src-tauri/src/tts-sync/: Cargo.toml  README.md
src-tauri/src/tts-sync/examples/: progress_example.rs
src-tauri/src/tts-sync/src/: config.rs  error.rs  lib.rs  notification.rs  progress.rs
src-tauri/src/tts-sync/src/media/: audio.rs  mod.rs  sync.rs  video.rs
src-tauri/src/tts-sync/src/subtitle/: analyzer.rs  mod.rs  optimizer.rs  parser.rs
src-tauri/src/tts-sync/src/tts/: cache.rs  mod.rs  openai.rs  processor.rs
src-tauri/src/tts-sync/src/utils/: ffmpeg.rs  mod.rs  temp.rs
src-tauri/src/utils/: common.rs  logger.rs  merge.rs  mod.rs  tools.rs  transcribe.rs  translate.rs  youtube.rs
src-tauri/src/utils/tts/: MIGRATION_PLAN.md  README.md  analysis.rs  audio_format.rs  audio_processing.rs  demucs.rs  examples.md  mod.rs  openai_tts.rs  soundtouch.rs  soundtouch_bridge.cpp  synchronizer.rs  tts.rs  types.rs  voice_gender_detector.py  vtt.rs
src-tauri/src/utils/tts/tests/: test_analysis.rs  test_audio_processing.rs  test_openai_tts.rs  test_synchronizer.rs  test_vtt_parser.rs
src/components/: LanguageSelector.vue  MainLayout.vue  MergeProgress.vue  ProgressBar.vue  ServiceAvailabilityCheck.vue  SettingsInput.vue  TTSProgress.vue  TranslationComplete.vue  TtsSettingsInput.vue  VideoPreview.vue  YouTubeInput.vue
src/utils/: serviceAvailability.ts
yt-translator/: index.html  package.json  pnpm-lock.yaml
yt-translator-app/: README.md  package.json  pnpm-lock.yaml  vite.config.ts
yt-translator-app/src/: App.vue  main.ts
yt-translator-app/src-tauri/: Cargo.toml  tauri.conf.json
yt-translator-app/src-tauri/src/: commands.rs  lib.rs  main.rs  models.rs
yt-translator-app/src-tauri/src/utils/: mod.rs  tools.rs  translator.rs
yt-translator-app/src/stores/: translator.ts
yt-translator/landing/: index.html
yt-translator/landing/styles/: animations.css  main.css
yt-translator/src/: App.vue
yt-translator/src-tauri/: Cargo.toml  tauri.conf.json
yt-translator/src-tauri/capabilities/: default.json  main.json
yt-translator/src-tauri/icons/: icon.icns
yt-translator/src-tauri/src/: commands.rs  main.rs
yt-translator/src-tauri/src/utils/: common.rs  logger.rs  merge.rs  mod.rs  tools.rs  transcribe.rs  translate.rs  tts.rs  youtube.rs
yt-translator/src/components/: ApiKeyInput.tsx  ApiKeyInput.vue  DownloadProgress.vue  LanguageSelector.vue  MainLayout.vue  ProcessingProgress.vue  ProgressStepper.vue  TTSProgress.vue  TranscriptionProgress.vue  TranslationProgress.vue  VideoPreview.vue  YouTubeInput.vue
yt-translator/src/utils/: languages.ts
