[package]
name = "videonova"
version = "0.1.0"
description = "Translate your favorite YouTube videos into any language with AI-powered voice translation"
authors = ["@region23"]
edition = "2024"

[build-dependencies]
tauri-build = { version = "2.0.6", features = [] }

[dependencies]
tauri = { version = "2.3.1", features = [] }
tauri-plugin-opener = "2.2"
tauri-plugin-dialog = "2.2"
tauri-plugin-store = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.43", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
tokio-stream = "0.1"
futures = "0.3"
reqwest = { version = "0.12", features = ["json", "multipart", "stream"] }
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
semver = "1.0"
once_cell = "1.20"
regex = "1.11"
tempfile = "3.17"
zip = "2.2"
walkdir = "2.5"
tauri-plugin-devtools = "2.0.0"
tauri-plugin-clipboard-manager = "2"
which = "6.0"
thiserror = "1.0"
lazy_static = "1.4"

# Работа с файлами и путями
path-clean = "1.0"

# Обработка аудио
symphonia = { version = "0.5", features = ["mp3", "aac", "wav", "pcm"] }
rubato = "0.14"
dasp = { version = "0.11", features = ["signal", "interpolate", "window"] }
webrtc-vad = "0.4"
hound = "3.5"

# Связь с нативными библиотеками через FFI
[dependencies.libc]
version = "0.2"

# Многопоточность и параллелизм
rayon = "1.7"
async-trait = "0.1"

# Утилиты
md5 = "0.7"
rand = "0.8"
bytes = "1.4"
uuid = { version = "1.3", features = ["v4"] }

# Время и даты
chrono = { version = "0.4", features = ["serde"] }

# TTS library - removed since we're using our own implementation

[dev-dependencies]
criterion = "0.5"
tokio-test = "0.4"

[features]
custom-protocol = ["tauri/custom-protocol"] 
