[package]
name = "videonova"
version = "0.1.0"
description = "Video translation app"
authors = ["Pavel Pavlenko"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0", features = [] }
cc = "1.0"

[dependencies]
# Tauri and UI
tauri = { version = "2.0", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime and networking
tokio = { version = "1.0", features = ["full"] }
tokio-util = "0.7"
futures = "0.3"
reqwest = { version = "0.11", features = ["json"] }
async-trait = "0.1"

# Utilities
once_cell = "1.8"
regex = "1.5"
semver = "1.0"
walkdir = "2.3"
zip = "0.6"
uuid = { version = "1.3", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Logging
log = "0.4"
env_logger = "0.10"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Tauri plugins
tauri-plugin-store = { version = "2.0" }
tauri-plugin-clipboard-manager = { version = "2.0" }
tauri-plugin-dialog = { version = "2.0" }
tauri-plugin-opener = { version = "2.0" }
tauri-plugin-shell = { version = "2.0" }

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.11"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"] 
