[package]
name = "videonova"
version = "0.1.0"
description = "Translate your favorite YouTube videos into any language with AI-powered voice translation"
authors = ["@region23"]
edition = "2024"

[build-dependencies]
tauri-build = { version = "2.0.6", features = [] }

[dependencies]
tauri = { version = "2.3.1", features = [] }
tauri-plugin-opener = "2.2"
tauri-plugin-dialog = "2.2"
tauri-plugin-store = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.43", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"
reqwest = { version = "0.12", features = ["json", "multipart", "stream"] }
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
semver = "1.0"
once_cell = "1.20"
regex = "1.11"
tempfile = "3.17"
zip = "2.2"
walkdir = "2.5"
tauri-plugin-devtools = "2.0.0"
tauri-plugin-clipboard-manager = "2"

[features]
custom-protocol = ["tauri/custom-protocol"] 
