[package]
name = "tts-sync"
version = "0.2.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A library for synchronizing TTS with video using OpenAI API, with progress tracking"
license = "MIT"
repository = "https://github.com/yourusername/tts-sync"
readme = "README.md"
keywords = ["tts", "video", "subtitles", "openai", "ffmpeg"]
categories = ["multimedia", "text-processing"]

[dependencies]
# Асинхронность и обработка ошибок
tokio = { version = "1.28", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"

# Сериализация/десериализация
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP клиент
reqwest = { version = "0.11", features = ["json", "stream", "multipart"] }

# Работа с файлами и путями
tempfile = "3.6"
walkdir = "2.3"
path-clean = "1.0"

# Регулярные выражения и обработка текста
regex = "1.8"
lazy_static = "1.4"

# Логирование
log = "0.4"
env_logger = "0.10"

# Обработка аудио
symphonia = { version = "0.5", features = ["mp3", "aac", "wav", "pcm"] }
rubato = "0.14"
dasp = { version = "0.11", features = ["signal", "interpolate", "window"] }
webrtc-vad = "0.4"

# Многопоточность и параллелизм
rayon = "1.7"
futures = "0.3"
async-trait = "0.1"

# Утилиты
md5 = "0.7"
rand = "0.8"
bytes = "1.4"
uuid = { version = "1.3", features = ["v4"] }

# Время и даты (новая зависимость для системы прогресса)
chrono = "0.4"

[dev-dependencies]
criterion = "0.5"
tokio-test = "0.4"

[[example]]
name = "progress_example"
path = "examples/progress_example.rs"
